[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joelkit"
version = "0.1.0"
description = "Data structures, algorithms, etc."
authors = [
    { name="Joel Grayson", email="joel@joelgrayson.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []
